# passfs

./: Cargo.toml  run
src/: fs.rs  fuse.rs  main.rs
