[package]
name = "pass_fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
arc-swap = "1.6.0"
env_logger = "0.10.0"
fuse-backend-rs = "0.10.1"
libc = "0.2.139"
log = "0.4.17"
nix = "0.26.2"
signal-hook = "0.3.15"
thiserror = "1.0.38"
