[package]
name = "pass_fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
arc-swap = "1.6.0"
env_logger = "0.10.0"
fuse-backend-rs = "0.10.5"
libc = "0.2.149"
log = "0.4.20"
signal-hook = "0.3.17"
thiserror = "1.0.50"
uzers = "0.11.3"
